# KBBank_Knowledge_graph

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  index.html  kb-deposit-pdf-scraper.skill  kb-loan-pdf-scraper.skill  kb-ontology-extractor.skill  pyproject.toml  render.yaml
assets/: index-DURsteKQ.css  index-Dp3IStLD.js
backend/: AGENTS.md  chatbot.py  dependencies.py  main.py
backend/agent/: AGENTS.md  __init__.py  graph.py  prompts.py  state.py
backend/agent/skills/: AGENTS.md  __init__.py  cypher_rag.py  dsr_calculator.py  eligibility_check.py  graph_rag.py  loan_search.py  ltv_calculator.py  mortgage_calculator.py  product_compare.py  product_search.py  rate_calculator.py
backend/routers/: AGENTS.md  chat.py  graph.py  products.py  search.py
data/: AGENTS.md
data/graph/: graph.json
data/products/담보대출/: KB 주택담보대출.md  KB 청약(주택종합저축)담보대출.md
data/products/대출/: for-you-장기대출.md  kb-4대연금-신용대출.md  kb-cofix연동-모기지론.md  kb-i-star-직장인-신용대출-본부승인대출.md  kb-i-star-직장인행복신용대출-2019-02-27-판매중단.md  kb-star-club-신용대출-2025-11-14-판매중단.md  kb-star-t-신용대출-2019-09-27-판매중단.md  kb-star-신용대출-2021-08-30-판매중단.md  kb-welcome-plus-전세자금대출.md  kb-wise-직장인대출-2019-09-27-판매중단.md  kb-가맹점대표-신용대출-2021-03-30-판매중단.md  kb-가업승계기업-상속-증여세-납부자금대출-부동산담보-2022-9-30-판매중단.md  (+123 more)
docs/: as-is-ontology.md
eval/: baseline_results.json  final_results.json  golden_set.json  iter1_results.json  iter2_results.json  run_eval.py
frontend/: AGENTS.md  index.html  package-lock.json  package.json
frontend/public/: graph.json
frontend/src/: AGENTS.md  App.tsx  config.ts
knowledge_graph/: AGENTS.md  __init__.py  builder.py  cypher_dump.py  db.py  deposit_builder.py  deposit_models.py  deposit_parser.py  export_from_md.py  exporter.py  extraction_schemas.py  llm_extractor.py  loan_builder.py  loan_models.py  loan_parser.py  loan_schema.cypher  md_utils.py  models.py  ontology.py  parser.py  query.py  schema.cypher  standalone_builder.py
scraper/: AGENTS.md  __init__.py  browser.py  config.py  discovery.py  download_deposit_pdfs.py  download_pdfs.py  enrich_from_listing.py  enrich_products.py  extractor.py  markdown_writer.py  parse_missing_pdfs.py  parse_pdfs.py  parse_pdfs_v2.py  run_scraper.py  scrape_loan_details.py
skills/: AGENTS.md  beotimok-jeonse-loan.md  bogeumjari-loan.md  compare-products.md  didimdol-loan.md  dsr-calculator.md  dti-calculator.md  loan-affordability.md  ltv-calculator.md  newborn-jeonse-loan.md  newborn-purchase-loan.md  query-graph.md  scrape-products.md  update-graph.md
skills/financial-regulations/: SKILL.md
(+60 files in other folders)
