[project]
name = "banking-bot"
version = "0.1.0"
description = "KB Star Bank 금융상품 지식그래프"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.24",
    "neo4j>=5.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
# Pinned to the langchain-core 0.3.x line (smoke-tested set) for deterministic
# rebuilds. langchain-core<1.0 is the lynchpin that keeps the whole stack on the
# tested versions; without it pip may resolve a mixed 1.x/0.3.x set.
chat = [
    "langchain>=0.3,<1.0",
    "langchain-core>=0.3,<1.0",
    "langchain-openai>=0.3,<1.0",
    "langchain-anthropic>=0.3,<1.0",
    "langchain-community>=0.3,<1.0",
    "langchain-neo4j>=0.3,<0.6",
    "langgraph>=0.4,<2.0",
]
scrape = [
    "playwright>=1.40",
    "python-frontmatter>=1.0",
    "python-slugify>=8.0",
    "pyyaml>=6.0",
    "PyMuPDF>=1.24",
]
all = [
    "banking-bot[chat,scrape]",
]

[project.scripts]
scrape = "scraper.run_scraper:main"
build-graph = "knowledge_graph.deposit_builder:main"
serve = "backend.main:run"
